@@ -4,6 +4,7 @@
     * Add W entry for GUI work
     * Various fixes for SQLBrowseConnect/W, SQLGetConnectAttr/W,and SQLSetConnectAttr/W
     * Fix buffer overflows in SQLConnect/W and refine behaviour of SQLGet/WritePrivateProfileString
+    * SQLBrowseConnect/W allow disconnecting a started browse session after error
 
 19-March-2018
 2.3.6
